kubernetes/apps/plinth/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plinth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plinth
  namespace: plinth
  labels:
    app: plinth
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: plinth
  template:
    metadata:
      labels:
        app: plinth
    spec:
      containers:
        - name: plinth
          image: registry.sh-lucas.dev/plinth:0.3.3 # {"$imagepolicy": "flux-system:plinth"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /docs
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /docs
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: db
              mountPath: /data
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: plinth-db
