kubernetes/apps/plinth/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: plinth
  namespace: plinth
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: plinth
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plinth
  namespace: plinth
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: plinth.sh-lucas.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plinth
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-only
  namespace: plinth
spec:
  podSelector:
    matchLabels:
      app: plinth
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 80
